<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="version_code" tools:ignore="MissingTranslation">2.850</string>
    <string name="version" tools:ignore="MissingTranslation">Версия: 2.850</string>
    <string name="app_name" tools:ignore="MissingTranslation">Такси Украина 2</string>
    <string name="back4app_server_url" tools:ignore="MissingTranslation">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id" tools:ignore="MissingTranslation">01YGF894m3NJRXT1BlH6qPo9pUfDlG9sqi9K9mIL</string>
    <string name="back4app_client_key" tools:ignore="MissingTranslation">T5f5GuT1UCmaiJn8Dek3sVmayGuJa2jfelQR6V6f</string>
    <string name="navigation_drawer_open" tools:ignore="MissingTranslation">Open navigation drawer</string>
    <string name="navigation_drawer_close" tools:ignore="MissingTranslation">Close navigation drawer</string>
    <string name="nav_header_title" tools:ignore="MissingTranslation">Попутчик такси Украина дешево</string>
    <string name="nav_header_subtitle" tools:ignore="MissingTranslation">Быстрые поездки по городам Украины</string>
    <string name="nav_header_desc" tools:ignore="MissingTranslation">Navigation header</string>
    <string name="action_settings" tools:ignore="MissingTranslation">Настройки</string>
    <string name="menu_maps" tools:ignore="MissingTranslation">Карта</string>
    <string name="menu_home" tools:ignore="MissingTranslation">По адресам</string>
    <string name="menu_gallery" tools:ignore="MissingTranslation">Мои маршруты</string>
    <string name="menu_slideshow" tools:ignore="MissingTranslation">Slideshow</string>
    <string name="menu_about" tools:ignore="MissingTranslation">О приложении</string>
    <string name="title_activity_login" tools:ignore="MissingTranslation">LoginActivity</string>
    <string name="prompt_email" tools:ignore="MissingTranslation">Email</string>
    <string name="prompt_password" tools:ignore="MissingTranslation">Password</string>
    <string name="action_sign_in" tools:ignore="MissingTranslation">Sign in или register</string>
    <string name="action_sign_in_short" tools:ignore="MissingTranslation">Sign in</string>
    <string name="welcome" tools:ignore="MissingTranslation">"Welcome!"</string>
    <string name="invalid_username" tools:ignore="MissingTranslation">Не valid username</string>
    <string name="invalid_password" tools:ignore="MissingTranslation">Password must be >5 characters</string>
    <string name="login_failed" tools:ignore="MissingTranslation">"Login failed"</string>
    <string name="action_exit" tools:ignore="MissingTranslation">Выход</string>
    <string name="delete_record" tools:ignore="MissingTranslation">удалить?</string>
    <string name="make_rout" tools:ignore="MissingTranslation">Создать маршрут</string>
    <string name="call_admin" tools:ignore="MissingTranslation">Вызов оператора</string>
    <string name="email_friend" tools:ignore="MissingTranslation">Рассказать другу</string>
    <string name="my_phone" tools:ignore="MissingTranslation">Мой телефон</string>
    <string name="open_maps" tools:ignore="MissingTranslation">Заказать по карте</string>
    <string name="driver" tools:ignore="MissingTranslation">Работа водителем</string>
    <string name="send_email" tools:ignore="MissingTranslation">Поделиться</string>
    <string name="gps_ok" tools:ignore="MissingTranslation">У Вас все хорошо</string>
    <string name="cancel_button" tools:ignore="MissingTranslation">Нет, спасибо</string>
    <string name="gps_on" tools:ignore="MissingTranslation">Включить</string>
    <string name="gps_info" tools:ignore="MissingTranslation">Чтобы улучшить работу программы, включите на устройстве геолокацию Google</string>
    <string name="gps_on_button" tools:ignore="MissingTranslation">включит gps</string>
    <string name="wellcome" tools:ignore="MissingTranslation">Сформируйте маршрут или выберите любимый.</string>
    <string name="verify_phone" tools:ignore="MissingTranslation">Проверка телефона</string>
    <string name="format_phone" tools:ignore="MissingTranslation">Формат ввода телефонного номера: +380936665544</string>
    <string name="sent_button" tools:ignore="MissingTranslation">Отправить</string>
    <string name="verify_internet" tools:ignore="MissingTranslation">Проверьте интернет-подключение или позвоните оператору.</string>
    <string name="save_button" tools:ignore="MissingTranslation">Сохранить</string>
    <string name="you_this" tools:ignore="MissingTranslation">"Вы сейчас здесь: "</string>
    <string name="make_rout_message" tools:ignore="MissingTranslation">Сформируйте маршрут</string>
    <string name="error_message" tools:ignore="MissingTranslation">"Ошибка: "</string>
    <string name="to_point" tools:ignore="MissingTranslation">"Место назначения: "</string>
    <string name="cost_of_order" tools:ignore="MissingTranslation">" Стоимость поездки: "</string>
    <string name="firebase_false_message" tools:ignore="MissingTranslation">грн. Извините, без проверки Google-аккаунта заказ невозможен.</string>
    <string name="UAH" tools:ignore="MissingTranslation">грн</string>
    <string name="order" tools:ignore="MissingTranslation">Заказать</string>
    <string name="thanks_message" tools:ignore="MissingTranslation">"Спасибо за заказ от "</string>
    <string name="call_of_order" tools:ignore="MissingTranslation">" Ожидайте звонка оператора. Стоимость поездки: "</string>
    <string name="next_try" tools:ignore="MissingTranslation">" Попробуйте еще или позвоните оператору."</string>
    <string name="help" tools:ignore="MissingTranslation">Поддержка</string>
    <string name="show_to_point" tools:ignore="MissingTranslation">Укажите место назначения</string>
    <string name="change" tools:ignore="MissingTranslation">ИЗМЕНИТЬ</string>
    <string name="on_city" tools:ignore="MissingTranslation">" по городу."</string>
    <string name="on_city_tv" tools:ignore="MissingTranslation">" по городу"</string>
    <string name="help_button" tools:ignore="MissingTranslation">Поддержка</string>
    <string name="try_again" tools:ignore="MissingTranslation">Заново</string>
    <string name="ok_button" tools:ignore="MissingTranslation">Ок</string>
    <string name="to_message" tools:ignore="MissingTranslation">" -> "</string>
    <string name="rout_from_message" tools:ignore="MissingTranslation">Укажите место отправки</string>
    <string name="routs_button" tools:ignore="MissingTranslation">Маршруты</string>
    <string name="old_routs_message" tools:ignore="MissingTranslation">Выбирайте из списка предыдущих поездок</string>
    <string name="firebase_error" tools:ignore="MissingTranslation">Извините. Вход заблокирован. Обратитесь к оператору.</string>
    <string name="choice_button" tools:ignore="MissingTranslation">подтвердить</string>
    <string name="to_edit" tools:ignore="MissingTranslation">Куда</string>
    <string name="from_edit" tools:ignore="MissingTranslation">Откуда</string>
    <string name="sms_code" tools:ignore="MissingTranslation">Код проверки со смс-сообщения</string>
    <string name="android" tools:ignore="MissingTranslation">Андроид-приложение для быстрых и дешевых поездок при заказе онлайн.</string>
    <string name="good_day" tools:ignore="MissingTranslation">Приветствую. Нашел великолепное приложение для поездок на такси. \n \n Советую попробовать по ссылке в официальном магазине Google: \n\n https://play.google.com/store/apps/details?id=com.taxieasyua.back4app \n\n Хорошего дня. \n Еще увидимся.</string>
    <string name="share" tools:ignore="MissingTranslation">Посоветовать другу приложение...</string>
    <string name="no_email_agent" tools:ignore="MissingTranslation">Почтовый клиент не установлен.</string>
    <string name="check_position" tools:ignore="MissingTranslation">Ожидайте, происходит определение Вашего местоположения...</string>
    <string name="my_adresses" tools:ignore="MissingTranslation">Избранные</string>
    <string name="make_order_message" tools:ignore="MissingTranslation">Совершите хотя бы одну поездку</string>
    <string name="to_adress_message" tools:ignore="MissingTranslation">Куда едем?</string>
    <string name="coastMarkersMessage" tools:ignore="MissingTranslation">"Стоимость поездки по маршруту "</string>
    <string name="please_phone_message" tools:ignore="MissingTranslation">Это приложение  передает номер Вашего мобильного телефона для включения функции заказа такси. Нажав кнопку СОХРАНИТЬ Вы подтверждаете согласие на передачу номера Вашего телефона диспетчеру для поиска автомобиля и сохранение его для следующих заказов.</string>
    <string name="check_message" tools:ignore="MissingTranslation">Ожидайте, идет подключение...</string>
    <string name="find_of_map" tools:ignore="MissingTranslation">Попробуйте найти на карте</string>
    <string name="end_point_marker" tools:ignore="MissingTranslation">Место назначения</string>
    <string name="error_firebase_start" tools:ignore="MissingTranslation">Ошибка проверки. Наберите оператора.</string>
    <string name="address_error_message" tools:ignore="MissingTranslation">Ошибка ввода адреса</string>
    <string name="BAGGAGE" tools:ignore="MissingTranslation">Загрузка салона</string>
    <string name="ANIMAL" tools:ignore="MissingTranslation">Животное</string>
    <string name="CONDIT" tools:ignore="MissingTranslation">Кондиционер</string>
    <string name="MEET" tools:ignore="MissingTranslation">Встреча с табличкой</string>
    <string name="COURIER" tools:ignore="MissingTranslation">Курьер. доставка</string>
    <string name="TERMINAL" tools:ignore="MissingTranslation">Терминал</string>
    <string name="CHECK" tools:ignore="MissingTranslation">Чек</string>
    <string name="BABY_SEAT" tools:ignore="MissingTranslation">Детское кресло</string>
    <string name="DRIVER" tools:ignore="MissingTranslation">Драйвер</string>
    <string name="NO_SMOKE" tools:ignore="MissingTranslation">Некурящий водитель</string>
    <string name="ENGLISH" tools:ignore="MissingTranslation">Англоговорящий водитель</string>
    <string name="CABLE" tools:ignore="MissingTranslation">Трос</string>
    <string name="FUEL" tools:ignore="MissingTranslation">Подвоз топлива</string>
    <string name="WIRES" tools:ignore="MissingTranslation">Провода</string>
    <string name="SMOKE" tools:ignore="MissingTranslation">Я буду курить</string>
    <string name="add_services" tools:ignore="MissingTranslation">Дополнительно</string>
    <string name="time_limit" tools:ignore="MissingTranslation">Превышение времени выполнения</string>
    <string name="slow_internet" tools:ignore="MissingTranslation">Низкая скорость интернета</string>
    <string name="Street_hint" tools:ignore="MissingTranslation">Улица</string>
    <string name="btn_cost" tools:ignore="MissingTranslation">Заказать</string>
    <string name="routs" tools:ignore="MissingTranslation">Мои адреса</string>
    <string name="on_map" tools:ignore="MissingTranslation">По карте</string>
    <string name="from_text" tools:ignore="MissingTranslation">Откуда</string>
    <string name="to_text" tools:ignore="MissingTranslation">Куда</string>
    <string name="uid_menu" tools:ignore="MissingTranslation">История заказов</string>
    <string name="my_bonus_menu" tools:ignore="MissingTranslation">Мои бонусы</string>
    <string name="lbl_amount" tools:ignore="MissingTranslation">Сумма к оплате (грн):</string>
    <string name="lbl_ccy" tools:ignore="MissingTranslation">Валюта:</string>
    <string name="lbl_email" tools:ignore="MissingTranslation">Электронная почта:</string>
    <string name="lbl_description" tools:ignore="MissingTranslation">Описание:</string>
    <string name="btn_pay_google" tools:ignore="MissingTranslation">Google Pay</string>
    <string name="btn_pay_card" tools:ignore="MissingTranslation">Картой</string>
    <string name="my_card_pay" tools:ignore="MissingTranslation">Платежная карта</string>
</resources>