<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_visicom">

    <fragment
        android:id="@+id/nav_visicom"
        android:name="com.taxieasyua.back4app.ui.visicom.VisicomFragment"
        android:label="@string/main_page"
        tools:layout="@layout/fragment_visicom" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.taxieasyua.back4app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.taxieasyua.back4app.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_uid"
        android:name="com.taxieasyua.back4app.ui.uid.UIDFragment"
        android:label="@string/uid_menu"
        tools:layout="@layout/fragment_uid" />
    <fragment
        android:id="@+id/nav_bonus"
        android:name="com.taxieasyua.back4app.ui.bonus.BonusFragment"
        android:label="@string/my_bonus_menu"
        tools:layout="@layout/fragment_bonus" />

    <fragment
        android:id="@+id/nav_card"
        android:name="com.taxieasyua.back4app.ui.card.CardFragment"
        android:label="@string/my_card_pay"
        tools:layout="@layout/fragment_card" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.taxieasyua.back4app.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>