<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#434C5E">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:text="@string/lbl_amount"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/edit_amount"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="7sp"
                android:textColor="@color/text"
                android:background="@null"
                android:textSize="40sp"
                android:textStyle="bold"
                android:inputType="none"
                android:focusable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:visibility="gone"
                android:text="@string/lbl_ccy" />

            <Spinner
                android:id="@+id/spinner_ccy"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:visibility="gone"
                android:text="@string/lbl_email" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:visibility="gone"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:visibility="gone"
                android:text="@string/lbl_description" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />

            <com.cloudipsp.android.CardInputView
                android:id="@+id/card_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_card_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_pay_card"


                    android:layout_width="293sp"
                    android:layout_height="45sp"
                    android:background="@drawable/buttons"
                    android:fontFamily="@font/regular"
                    android:gravity="center"

                    android:text="@string/btn_pay_card"

                    android:textAlignment="center"
                    android:textColor="#D9D9D9"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_pay_google"
                    android:layout_width="293sp"
                    android:layout_height="45sp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/buttons"
                    android:fontFamily="@font/regular"
                    android:gravity="center"
                    android:text="@string/btn_pay_google"
                    android:textAlignment="center"
                    android:textColor="#D9D9D9"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_pay_card" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <com.cloudipsp.android.CloudipspWebView
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
</RelativeLayout>
