<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_background_color">

    <TextView
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/regular"
        android:text="1"
        android:textColor="#D9D9D9"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textfrom" />

    <EditText
        android:id="@+id/textGeo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="14dp"
        android:background="@drawable/input"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="@string/Street_hint"
        android:textColor="@color/white"
        android:textColorHint="#ABD9D9D9"

        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/num1"
        app:layout_constraintTop_toBottomOf="@+id/textfrom"
        tools:ignore="MissingConstraints" />


    <ImageButton
        android:id="@+id/btn_clear_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/buttons"
        android:scaleType="centerInside"
        android:src="@drawable/ic_clear_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/textGeo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/regular"
        android:text="2"

        android:textColor="#D9D9D9"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textwhere" />


    <EditText
        android:id="@+id/text_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="@string/Street_hint"
        android:textColor="@color/white"
        android:textColorHint="#ABD9D9D9"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/num2"
        app:layout_constraintTop_toBottomOf="@+id/textwhere" />

    <ImageButton
        android:id="@+id/btn_clear_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/buttons"
        android:scaleType="centerInside"
        android:src="@drawable/ic_clear_24dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/text_to"
        app:layout_constraintTop_toBottomOf="@+id/btn_clear_from" />

    <TextView
        android:id="@+id/textfrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/light"
        android:text="@string/from_text"
        android:textColor="#9DA0A8"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textwhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/light"

        android:text="@string/to_edit"
        android:textColor="#9DA0A8"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGeo" />

    <ListView
        android:id="@+id/listAddress"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/text_to"
        tools:layout_editor_absoluteX="-16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_no"
        android:layout_width="197sp"
        android:layout_height="45sp"

        android:layout_margin="8dp"
        android:fontFamily="@font/regular"
        android:text="@string/cancel_button"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ok" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_map"
        android:layout_width="197sp"
        android:layout_height="45sp"

        android:layout_marginTop="8dp"
        android:fontFamily="@font/regular"
        android:text="@string/on_map"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_no" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_width="197sp"
        android:layout_height="45sp"
        android:layout_margin="8dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/regular"
        android:text="@string/ok_button"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>